@@ -26,6 +26,7 @@ Features added
 * #7745: html: inventory is broken if the docname contains a space
 * #7902: html theme: Add a new option :confval:`globaltoc_maxdepth` to control
   the behavior of globaltoc in sidebar
+* #7840: i18n: Optimize the dependencies check on bootstrap
 * #7052: add ``:noindexentry:`` to the Python, C, C++, and Javascript domains.
   Update the documentation to better reflect the relationship between this option
   and the ``:noindex:`` option.
